--- a/battles.html
+++ b/battles.html
@@ -274,7 +274,7 @@
       appId: '1:1080387235822:web:77faea231641837950e8ff'
     };
 
-    const IMGBB_API_KEY = window.IMGBB_API_KEY || localStorage.getItem('sr_ludo_imgbb_api_key') || 'ca44783bda6779b5e3913432bd243b30';
+    const IMGBB_API_KEY = window.IMGBB_API_KEY || localStorage.getItem('ca44783bda6779b5e3913432bd243b30') || 'ca44783bda6779b5e3913432bd243b30';
 
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
